# yay

./: README.md  example.yay
.github/workflows/: build.yml
src/: main.py  parsing.py  pyproject.toml  tokenization.py
trampoline/: commands.py  computer.py  main.py  misc.py  pyproject.toml  running.py  test.py  tokenization.py  yay.yay
