[project]
name = "trampoline"
version = "0.1.0"
description = "A way to run .yay scripts!"
authors = [
    {name = "Alí Sinisterra",email = "haidarconh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
